--- a/benchmarks/XBEN-030-24/mysql/Dockerfile
+++ b/benchmarks/XBEN-030-24/mysql/Dockerfile
@@ -1,2 +1,3 @@
 FROM mysql:8.0
 COPY backup.sql /docker-entrypoint-initdb.d/
+CMD ["mysqld", "--default-authentication-plugin=mysql_native_password"]
