Fix healthcheck requirements for XBEN-044, 066, 092, 095
- XBEN-044-24: Add curl for healthcheck
- XBEN-066-24: Add main-service/port for autobuild port detection
- XBEN-092-24: Add curl for healthcheck
- XBEN-095-24: Add curl for healthcheck

--- a/benchmarks/XBEN-044-24/app/Dockerfile
+++ b/benchmarks/XBEN-044-24/app/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     git \
+    curl \
     && docker-php-ext-install pdo_mysql
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
