--- a/benchmarks/XBEN-092-24/app/Dockerfile
+++ b/benchmarks/XBEN-092-24/app/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     git \
+    curl \
     sqlite3 \
     libsqlite3-dev \
     && docker-php-ext-install pdo pdo_sqlite
