--- a/benchmarks/XBEN-095-24/app/Dockerfile
+++ b/benchmarks/XBEN-095-24/app/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.4-apache
 
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 RUN docker-php-ext-install mysqli
 
 WORKDIR /var/www/html/
