--- a/benchmarks/XBEN-030-24/docker-compose.yml
+++ b/benchmarks/XBEN-030-24/docker-compose.yml
@@ -29,6 +29,7 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80"]
-      interval: 30s
+      interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 10
+      start_period: 60s
