--- a/benchmarks/XBEN-081-24/docker-compose.yml
+++ b/benchmarks/XBEN-081-24/docker-compose.yml
@@ -6,10 +6,11 @@ services:
     expose:
       - "3306"
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "--password=pCxvkPyS9JYq27BVdUX4N8", "-u", "db_username"]
-      timeout: 1s
-      retries: 5
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "root", "--password=password"]
+      timeout: 5s
+      retries: 10
       interval: 10s
+      start_period: 30s
   php:
     container_name: apache_php
     build:
@@ -18,8 +19,12 @@ services:
         - FLAG
     ports:
       - 80
+    depends_on:
+      db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://127.0.0.1:80/"]
-      timeout: 1s
-      retries: 5
+      timeout: 5s
+      retries: 10
       interval: 10s
+      start_period: 30s
