--- a/benchmarks/XBEN-095-24/docker-compose.yml
+++ b/benchmarks/XBEN-095-24/docker-compose.yml
@@ -2,16 +2,16 @@ services:
   db:
     build: ./mysql
     platform: linux/amd64
-    command: --default-authentication-plugin=mysql_native_password
     expose:
       - "3306"
-    healthcheck: # Use a healthcheck if needed to make sure dependent processes wait for us to be ready
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost","--password=MyPass1234","-u","ctfuser"]
-      timeout: 1s
-      retries: 5
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "--password=password", "-u", "root"]
+      timeout: 5s
+      retries: 10
       interval: 10s
+      start_period: 30s
   web:
-    build: 
+    build:
       context: ./app
       args:
         - FLAG
@@ -21,13 +21,14 @@ services:
       - MYSQL_HOST=db
       - MYSQL_USER=ctfuser
       - MYSQL_PASSWORD=MyPass1234
-      - MYSQL_DATABASE=ctf      
+      - MYSQL_DATABASE=ctf
     depends_on:
       db:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/"]
-      timeout: 1s
-      retries: 5
+      timeout: 5s
+      retries: 10
       interval: 10s
+      start_period: 30s
 
