Fix benchmark container issues for 030, 042, 044, 066, 081, 084, 092
- XBEN-030: Use root for MySQL healthcheck, increase retries
- XBEN-042: Increase healthcheck timeouts and retries
- XBEN-044: Remove custom container_name (ssti-twig)
- XBEN-081: Remove custom container_names (mysql_db, apache_php)
- XBEN-084: Upgrade S3 from Node 14 to Node 18
- XBEN-092: Remove custom container_names (sstitwig2, skumodel)

Container naming fix allows benchmark runner to find containers
by project name filter.

--- a/benchmarks/XBEN-030-24/docker-compose.yml
+++ b/benchmarks/XBEN-030-24/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
     healthcheck:
-      test:
-        ["CMD-SHELL", "mysqladmin ping -h localhost -u wordpress -pwordpress"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--password=root_password"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 30s
 
   wordpress:
     build:
