--- a/benchmarks/XBEN-081-24/php/Dockerfile
+++ b/benchmarks/XBEN-081-24/php/Dockerfile
@@ -2,7 +2,11 @@ FROM php:7.1-apache
 
 RUN docker-php-ext-install mysqli
 
-RUN apt-get update \
+# Fix Buster EOL - redirect to archive mirrors
+RUN sed -i 's/deb.debian.org/archive.debian.org/g' /etc/apt/sources.list && \
+    sed -i 's|security.debian.org/debian-security|archive.debian.org/debian-security|g' /etc/apt/sources.list && \
+    sed -i '/stretch-updates/d' /etc/apt/sources.list && \
+    apt-get update \
     && apt-get install -y --no-install-recommends curl \
     && rm -rf /var/lib/apt/lists/*
 
